--- a/caps/introduccion.tex
+++ b/caps/introduccion.tex
@@ -38,7 +38,7 @@ Este dataset contiene datos recogidos de la aplicación PokemonGo, esta aplicaci
  
 \item \textbf{weather}: un string indicando el tiempo que hacía en el momento del avistamiento.
  
-\item \textbf{temperatureç: temperatura en grados Celsius en el momento del avistamiento.
+\item \textbf{temperature}: temperatura en grados Celsius en el momento del avistamiento.
 
 \item \textbf{windSpeed}: velocidad del viento en el momento del avistamiento km/h.
 
@@ -54,7 +54,7 @@ Este dataset contiene datos recogidos de la aplicación PokemonGo, esta aplicaci
 
 \item \textbf{sunsetMinutesBefore,sunriseMinutesSince}: según la página del dataset es los minutos del avistamiento relativos al amanecer y al atardecer.
  
-\item \textbf{population_density}: densidad de población por km^2 en un avistamiento.
+\item \textbf{population\_density}: densidad de población por $km^2$ en un avistamiento.
 
 \item \textbf{urbal-rural}: cómo de urbana es la localización donde apareció el pokemon relativa a la population density
 
