--- a/doc.tex
+++ b/doc.tex
@@ -75,6 +75,8 @@
 
 \section{Análisis exploratorio}
 
+\input{caps/analisis-exploratorio.tex}
+
 \section{Clasificación}
 
 \input{caps/clasificacion.tex}
@@ -84,5 +86,15 @@
 \input{caps/asociacion.tex}
 
 \section{Conclusiones}
+
+\input{caps/conclusiones.tex}
+
+\section{Material consultado}
+
+\begin{itemize}
+\item \href{https://www.kaggle.com/semioniy/predictemall}{El repositorio del dataset}.
+\item Los scripts de R del material de la asignatura.
+\item Algunos enlaces en los que se explicaba como elaborar algunas de las gráficas que hemos generado durante este estudio.
+\end{itemize}
 
 \end{document}
